[tool.poetry]
name = "attractors"
version = "1.4.1"
description = "Simulation and visualization of strange attractors"
authors = ["Vignesh Mohan <vignesh.desmond@gmail.com>"]
maintainers = ["Vignesh Mohan <vignesh.desmond@gmail.com>"]
license = "MIT"
readme = "readme.rst"
homepage = "https://github.com/Vignesh-Desmond/attractors"
repository = "https://github.com/Vignesh-Desmond/attractors"
documentation = "https://attractors.readthedocs.io/en/latest/"
keywords = [
    "Attractors",
    "Strange Attractors",
    "Lorenz",
    "Chen",
    "Chaotic Attractors",
]
classifiers = [
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
    "Intended Audience :: Education",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.4.2"
tqdm = "^4.61.2"
pathos = "^0.2.8"
more-itertools = "^8.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
isort = "^5.9.1"
pytest-cov = "^2.12.1"
Sphinx = "^4.1.1"
sphinx-rtd-theme = "^0.5.2"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"

[tool.poetry.scripts]
attractors = "attractors.parser:cli"

[tool.poetry.extras]
doc = ["sphinx", "matplotlib", "pathos", "tqdm", "numpy", "more-itertools"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'W503', 'F403', 'F401']
max-line-length = 88
max-complexity = 18

[tool.isort]
known_third_party = ["matplotlib", "mpl_toolkits", "numpy", "src"]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
line-length = 88
target-version = ['py37', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''
